--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -25,6 +25,14 @@
                 padding: 20px;
             }
 
+            .role-btn.active {
+                color: #56bcdd;
+            }
+
+            .tribal-btn.active {
+                color: #56bcdd;
+            }
+
             .search-functions a {
                 margin: 0px 10px;
             }
@@ -141,6 +149,21 @@
             #tag-upload {
                 float: left;
                 width: 30%;
+            }
+
+            /* My Account page */
+            .remove-text-container {
+                text-align: right;
+            }
+
+            .small-text-green {
+                color: #6ad16f;
+                font-size: 11px;
+            }
+
+            .small-text-blue {
+                color: #56bcdd;
+                font-size: 11px;
             }
         </style>
 
