--- a/main/templates/main/upload_js.html
+++ b/main/templates/main/upload_js.html
@@ -15,6 +15,7 @@
             <div style='float:left;width:40%'>
                 Title {{ form.title }}<br>
                 Background / Experience {{ form.categories }}<br><br>
+                Are you interested in a Technical or MBA/Management-type Role {{ form.role }}<br><br>
                 <b>Preferences</b><br>
                 Job Type {{ form.jobtypes }}<br>
                 Tribal Interests {{ form.tribals }}<br>
